--- a/Source/manifest.json
+++ b/Source/manifest.json
@@ -1,8 +1,8 @@
 {
-	"manifest_version": 2,
-	"name": "Cloud To Butt",
+	"manifest_version": 1,
+	"name": "Bitcoin To Buttcoin",
 	"version": "1.0",
-	"description": "Replaces the text 'the cloud' with 'my butt'.",
+	"description": "Replaces the text 'Bitcoin' with 'Buttcoin'.  Copied from Cloud-to-Butt",
 	"content_scripts": 
 	[
 		{
