--- a/BitButtcoins/manifest.json
+++ b/BitButtcoins/manifest.json
@@ -1,8 +1,8 @@
 {
 	"manifest_version": 2,
 	"name": "Bitcoin To Buttcoin",
-	"version": "1.0",
-	"description": "Replaces the text 'Bitcoin' with 'Buttcoin'.  Copied from Cloud-to-Butt",
+	"version": "1.1",
+	"description": "Replaces the text 'Bitcoin' with 'Buttcoin'.  Copied from Cloud-to-Butt, now covers more coins",
 	"content_scripts": 
 	[
 		{
